backends/drm: fix vblank calculation

Due to some misinterpretation of mode timings, the old method calculated vsync, not vblank,
so the resulting duration was much shorter, which caused frame drops on some systems.

BUG: 482064


(cherry picked from commit da80dd4c8473de71e743d016791d5ddb06ff0996)