src/backends/drm/drm_connector.cpp
@@ -71,7 +71,7 @@ std::shared_ptr<DrmBlob> DrmConnectorMode::blob()
 
 std::chrono::nanoseconds DrmConnectorMode::vblankTime() const
 {
-    return std::chrono::nanoseconds(((m_nativeMode.vsync_end - m_nativeMode.vsync_start) * m_nativeMode.htotal * 1'000'000ULL) / m_nativeMode.clock);
+    return std::chrono::nanoseconds(((m_nativeMode.vtotal - m_nativeMode.vdisplay) * m_nativeMode.htotal * 1'000'000ULL) / m_nativeMode.clock);
 }
 
 drmModeModeInfo *DrmConnectorMode::nativeMode()
